[project]
name = "python-poetry-env"
version = "0.1.0"
description = "manages pyenv-poetry environments"
authors = [{ name = "tecno", email = "tecno-pro@tuta.io" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
openai = "^1.63.2"
pytest = "^8.3.4"
pre-commit = "^4.1.0"
black = "^25.1.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
